# nesta_ds_utils

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug Report.yml  Feature Request.yml
.github/ISSUE_TEMPLATES/: Bug Report.yml  Feature Request.yml
.github/workflows/: doc_build.yml  pytest.yml  tests.yml
docs/: conf.py  index.html  index.rst  reference.rst  usage.rst
docs/source/: S3.rst  altair.rst  build.rst  cleaning.rst  conf.py  data_manipulation.rst  file_ops.rst  formatting.rst  generate.rst  index.rst  plotting.rst  saving.rst  test_data_manipulation.rst  test_file_ops.rst  test_plotting.rst
nesta_ds_utils/: __init__.py  data_manipulation.py  file_ops.py  nesta_io.py  nesta_theme_Helvetica.yaml  plotting.py
nesta_ds_utils/loading_saving/: S3.py  __init__.py  file_ops.py  gis_interface.py
nesta_ds_utils/networks/: build.py  generate.py
nesta_ds_utils/viz/altair/: formatting.py  saving.py
nesta_ds_utils/viz/themes/: nesta_theme_Averta.yaml
src/ds_utils/: __init__.py  __main__.py
tests/: __init__.py  test_data_manipulation.py  test_file_ops.py  test_main.py  test_nesta_io.py  test_plotting.py  test_save_load_s3.py
tests/artifacts/: dummy.pkl  dummy_array.parquet  dummy_dataframe.csv  dummy_dataframe.geojson  dummy_dataframe.parquet  dummy_dataframe.xlsm  dummy_dataframe.xlsx  dummy_dict.geojson  dummy_dict.json  dummy_dict.xml  dummy_list.csv  dummy_list.json
tests/cleaning/: test_datetime_ops.py
tests/loading_saving/: test_S3.py  test_file_ops.py
tests/networks/: test_build.py  test_generate.py
tests/viz/altair/: test_format.py  test_saving.py
