[tool.poetry]
name = "ds-utils"
version = "0.0.0"
description = "Nesta Data Science Utilities"
authors = ["Nesta <software_development@nesta.org.uk>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/nestauk/ds-utils"
repository = "https://github.com/nestauk/ds-utils"
documentation = "https://ds-utils.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/nestauk/ds-utils/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
mypy = "^0.800"
xdoctest = {extras = ["colors"], version = "^0.15.3"}
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.10.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.1"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.5.0"
Pygments = "^2.7.4"
flake8-import-order = "^0.18.1"
nox = "^2020.12.31"

[tool.poetry.scripts]
ds-utils = "ds_utils.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ds_utils"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
