[metadata]

name = nesta_ds_utils
version = 0.1
description = Utility package for Nesta's Data Science Practice
url = https://github.com/nestauk/nesta_ds_utils
author = Nesta DAP
author_email = dataanalytics@nesta.org.uk
license = MIT,
packages = ["nesta_ds_utils"]

[options]
python_requires = >=3.8
install_requires =
    numpy==1.23.4
    pandas==1.5.1
    boto3==1.24.93
    altair==4.2.0
    altair_saver==0.5.0
    selenium==4.2.0
    webdriver_manager==3.8.4
    matplotlib==3.6.2

[options.extras_require]
test =
  pytest==7.1.3
dev =
    Sphinx==5.2.3
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    pytest==7.1.3
    pre-commit==2.20.0
    pre-commit-hooks==4.3.0
    black==22.10.0
