[metadata]

name = nesta_ds_utils
version = 0.1
description = Utility package for Nesta's Data Science Practice
url = https://github.com/nestauk/nesta_ds_utils
author = Nesta DAP
author_email = dataanalytics@nesta.org.uk
license = MIT,
packages = ["nesta_ds_utils"]

[options]
python_requires = >=3.8
install_requires =
    numpy>=1.23.4
    pandas>=1.5.1
    pyyaml>=6.0.1
    scipy>=1.9.3
    pyarrow>=10.0.0
[options.extras_require]
s3 =
  boto3>=1.24.93
gis =
  geopandas>=0.13.2
io_extras =
  openpyxl>=3.0.9
viz =
  altair>=4.2.0
  vl-convert-python>=1.2.0
  matplotlib>=3.6.2
  selenium>=4.17.2
  webdriver_manager>=4.0.0
networks =
  networkx==2.8.8
nlp =
  nltk>=3.7
all =
  %(s3)s
  %(gis)s
  %(io_extras)s
  %(viz)s
  %(networks)s
  %(nlp)s
test =
  pytest==7.1.3
  moto[s3]==4.0.7
  %(all)s
dev =
  Sphinx==5.2.3
  sphinxcontrib-applehelp==1.0.2
  sphinxcontrib-devhelp==1.0.2
  sphinxcontrib-htmlhelp==2.0.0
  sphinxcontrib-jsmath==1.0.1
  sphinxcontrib-qthelp==1.0.3
  sphinxcontrib-serializinghtml==1.1.5
  pre-commit==2.20.0
  pre-commit-hooks==4.3.0
  black==22.10.0
  %(test)s

[options.package_data]
nesta_ds_utils.viz.themes =
    *.yaml
